[project]
name = "aether-lc"
version = "0.3.0"
description = "LeetCode CN local workflow CLI."
readme = "README.md"
authors = [
    { name = "Aetherialter", email = "Aetherialter@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "browser-cookie3>=0.20.1",
    "httpx>=0.28.1",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
lc = "aether_lc.cli:app"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
